Fix projects edition spacing

--- a/app/assets/stylesheets/components/_projects-edit.scss
+++ b/app/assets/stylesheets/components/_projects-edit.scss
@@ -2,6 +2,6 @@
 
 .projects-edit {
   .project-edit + .project-edit {
-    margin-top: 1rem;
+    margin-top: .5rem;
   }
 }
